# Retrogame-base-deprecated

./: .gitignore  .gitmodules  CMakeLists.txt  beautify.astylerc
src/: Retrogamebase.h  globals.cpp  globals.hpp  main-unittest.cpp  main.cpp  window.hpp
src/base/: exceptions.hpp  globals.cpp  globals.hpp
src/gfxSystem/: animation.cpp  animation.hpp  animationlayer.cpp  animationlayer.hpp  animationlayerstore.cpp  animationlayerstore.hpp  animationstore.cpp  animationstore.hpp  texturestore.cpp  texturestore.hpp  window.cpp  window.hpp
src/gfxSystem/effects/: overlayfadeout.cpp  overlayfadeout.hpp  simplefadeout.cpp  simplefadeout.hpp  stripesfadeout.cpp  stripesfadeout.hpp  visualeffect.cpp  visualeffect.hpp
src/unittest-driver/: unittest.cpp  unittest.hpp
src/unittests/: animation-unittest.cpp  animation-unittest.hpp  animationstore-unittest.cpp  animationstore-unittest.hpp  gfxsystem-base-unittest.cpp  gfxsystem-base-unittest.hpp  globals-unittest.cpp  texturestore-unittest.cpp  unittest-animation.cpp  unittest-animation.hpp  unittest-animationlayer.cpp  unittest-animationlayer.hpp  unittest-animationlayerstore.cpp  unittest-animationlayerstore.hpp  unittest-animationstore.cpp  unittest-globals.cpp  unittest-globals.hpp  unittest-macros.hpp  unittest-texturestore.cpp  unittest-texturestore.hpp  unittest-window.cpp  unittest-xmlsystem.cpp  unittest-xmlsystem.hpp  window-unittest.cpp  window-unittest.hpp  xmlsystem-unittest.cpp  xmlsystem-unittest.hpp
src/xmlSystem/: xmlwrapper.cpp  xmlwrapper.hpp
unittest-xml/animationlayers/: scene.xml
unittest-xml/animations/: animation-pure.xml  animation-ref.xml  animation-sea.xml  animation-simple.xml  animation-valid-deprecated.xml
unittest-xml/animations-invalid/: invalid-filename.xml  invalid-missing-tag.xml
unittest-xml/invalid/: invalid-project-explicit.xml  invalid-version-major.xml  invalid-version-text.xml
unittest-xml/xml-invalid/: invalid-project-implicit.xml  invalid-project-missing-name.xml  invalid-version-major.xml  invalid-version-minor.xml  invalid-version-missing.xml  invalid-version-text.xml
